--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 .header {
     display: flex;
     justify-content: space-between;
-    background-color: slategray;
+    background-color: #1F2937;
     padding: 12px;
 }
 
