--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ a {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 30px;
 }
 
 .info-title {
@@ -55,17 +56,23 @@ a {
 }
 .info-contents {
     display: flex;
+    gap: 40px;
 }
 
 .info-box {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
+    text-align: center;
+    width: 150px;
+    gap: 3px;
+    padding-bottom: 60px;
 }
 
 .illustration {
-    width: 100px;
-    height: 100px;
-    border: 2px solid #3882F6;
+    width: 150px;
+    height: 150px;
+    border: 4px solid #3882F6;
     border-radius: 10px;
 }
 
