--- a/style.css
+++ b/style.css
@@ -9,15 +9,10 @@ body {
     flex-direction: column;
 }
 
-.image-placeholder {
-    width: 100px;
-    height: 50px;
-    border: 1px solid black;
-}
-
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 320px;
     background-color: #1F2937;
     padding: 12px;
 }
@@ -41,6 +36,39 @@ a {
     color: #E5E7EB;
 }
 
+.hero {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:20px;
+    background-color: #1F2937;
+    padding-top: 75px;
+    padding-bottom: 75px;
+}
+
+.hero-left {
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+}
+
+.image-placeholder {
+    background: grey;
+    color: #E5E7EB;
+    padding: 88px 100px;
+}
+
+.main-text {
+    color:#F9FAF8;
+    font-size: 48px;
+    font-weight:bolder;
+}
+
+.secondary-text {
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
 .info {
     display: flex;
     flex-direction: column;
@@ -53,6 +81,7 @@ a {
     font-size: 36px;
     font-weight: bolder;
     color: #1F2937;
+    padding-top: 20px;
 }
 .info-contents {
     display: flex;
